fix(ChatItem): second attempt at fixing double tap zoom issue on ios

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,6 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-body {
-  touch-action: manipulation;
-}
-
 .dark select {
   appearance: none;
   -webkit-text-fill-color: white;
